再生、停止機能を追加

--- a/youtube_iframe_sample/Base.lproj/Main.storyboard
+++ b/youtube_iframe_sample/Base.lproj/Main.storyboard
@@ -28,6 +28,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mfi-9j-AJc">
+                                <rect key="frame" x="78" y="89" width="510" height="286"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sbn-sq-8zu">
                                 <rect key="frame" x="427" y="5" width="31" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -44,29 +49,33 @@
                                     <action selector="skip_button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nvz-ui-hfu"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4UH-qk-Hhe">
+                                <rect key="frame" x="616" y="5" width="31" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="再生"/>
+                                <connections>
+                                    <action selector="play_and_stop_button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dok-sJ-Onf"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKH-d9-dR1">
-                                <rect key="frame" x="122" y="10" width="62" height="30"/>
+                                <rect key="frame" x="517" y="5" width="62" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="巻き戻し"/>
                                 <connections>
                                     <action selector="back_button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kHP-Vn-djC"/>
                                 </connections>
                             </button>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mfi-9j-AJc">
-                                <rect key="frame" x="78" y="89" width="510" height="286"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </webView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
                         <outlet property="main_webview" destination="mfi-9j-AJc" id="gnf-qH-fTw"/>
+                        <outlet property="play_and_stop_button" destination="4UH-qk-Hhe" id="I2d-bb-rEe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="33.733133433283363" y="24.800000000000001"/>
+            <point key="canvasLocation" x="44.527736131934034" y="21.600000000000001"/>
         </scene>
     </scenes>
 </document>
